更新 footer 連結至工具箱

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <footer>
             <div class="footer-links">
-                <p>🛠️ 其他 FFXIV 工具：<a href="https://cycleapple.github.io/ffxiv-collection-tc/" target="_blank">繁中收藏查詢站</a></p>
+                <p>🛠️ 更多工具：<a href="https://cycleapple.github.io/xiv-tc-toolbox/" target="_blank">FFXIV 繁中工具箱</a></p>
             </div>
             <div class="footer-credits">
                 <p>資料來源：<a href="https://ffxivteamcraft.com" target="_blank">FFXIV Teamcraft</a></p>
